@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020111215"
-#define public MagickPackageReleaseDate "snapshot-20111215"
+#define public MagickPackageVersionAddendum ".020111221"
+#define public MagickPackageReleaseDate "snapshot-20111221"
