@@ -36,6 +36,15 @@
 <div class="document">
 
 
+<p>2011-12-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/studio.h: Enable building and running correctly with
+Open64 Compiler Suite: Version 4.2.5.2 compiler with OpenMP.</li>
+<li>magick/command.c (BenchmarkImageCommand): Add -rawcsv option to
+benchmark to output only original data in a CSV format.</li>
+</ul>
+</blockquote>
 <p>2011-12-15  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
